# a2r2

./: .gitignore  README.md  a2r2-01.ipynb  a2r2-02.ipynb  a2r2-03.ipynb  environment.yml  pyproject.toml  run_nn.ipynb
atelier/: data.py  io.py  requests.py
atelier/defenses/: rastogi.py
atelier/extensions/: star.py  urennes.py
atelier/extensions/star/: data.py  defenses.py  preprocessing.py  privacy.py
atelier/learn/: __init__.py  features.py  linear_regression_model.py  lstm_nn_model.py  model.py  preprocessing.py  validation.py
atelier/metrics/: __init__.py  anonymity_set.py  anonymity_sets.py  entropy.py
atelier/plot/: __init__.py  defenses.py  geo.py  learn.py  metrics.py  privacy.py  timeline.py
atelier/privacy/: mechanism.py  rastogi.py
atelier/utils/: colaboratory.py  time.py
notebooks/: a2r2-01.ipynb  a2r2-02.ipynb  a2r2-03.ipynb
