[tool.poetry]
name = "synthetic"
version = "0.1.0"
description = "SDV data generator for RUDI workshop"
authors = ["jrbalderrama <jrbalderrama@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
folium = "^0.12.1"
jupyter = "^1.0.0"
jupyter-http-over-ws = "^0.0.8"
jupytext = "^1.12.0"
pandas = "^1.3.3"
plotly = "^5.3.1"
pyarrow = "^5.0.0"
scikit-learn = "^0.24.2"
torch = "^1.9.1"
orjson = {version = "^3.6.3", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
dark = "^0.7.1"
ipykernel = "^6.4.1"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
