[tool.poetry]
name = "a2r2"
version = "1.0.0"
description = "Atelier d'Anonymisation - Les Rencontres RUDI 2021"
authors = [
    "jrbalderrama <jrbalderrama@users.noreply.github.com>",
    "tristan-allard <tristan.allard@irisa.fr>",
]

license = "CC0-1.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
folium = "^0.12.1"
jupyter = "^1.0.0"
jupyter-http-over-ws = "^0.0.8"
jupytext = "^1.12.0"
pandas = "^1.3.3"
plotly = "^5.3.1"
pyarrow = "^5.0.0"
scikit-learn = "^0.24.2"
torch = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
blackcellmagic = "^0.0.3"
dark = "^0.7.1"
ipykernel = "^6.4.1"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
